tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FlowerPower-AAAAAAAAAAAAAAAAAAAAIA==__MoronsManualforM-AAAAAAAAAAAAAAAAAAAMtQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3253,
  "prerequisites": [
    3222
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To use the power of magical flowers, you must understand how to generate and manipulate mana. This ethereal blue-ish substance is produced by generating flowers, when their requirements are met. Mana is not easily quantified, so you will have to do a lot of estimating if you want to use it efficiently.\n\nOnce you have chosen which flower you want to use to generate mana, you must plant it near a mana spreader. When the flower's conditions are fulfilled, it will begin to produce mana, and store it in the internal buffer of the nearest mana spreader. The mana spreader itself will automatically emit any mana it contains, provided it is aimed at a valid destination (such as a mana pool). You'll need a lot of these devices, so craft a pair for now.\n\nMana spreaders will aim towards you when you place them down. To change their direction, use a wand of the forest: while holding the wand, shift-right-click on the mana spreader, and then shift-right-click on the block you want it to aim at. This method of binding also works for other things, such as binding a flower to a specific mana spreader.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Moron's Manual For Mana Manufacture And Manipulation",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3222
  ],
  "rewards": [],
  "tasks": []
}
