tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FlowerPower-AAAAAAAAAAAAAAAAAAAAIA==__Pollinationbuddi-AAAAAAAAAAAAAAAAAAAMmQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3225,
  "prerequisites": [
    3221
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Some flowers are everywhere, and some are limited to specific biomes. If you don't want to walk long distances from home, you can call in some help.\n\nBees with the flower trait will slowly generate new flowers in its working area, including plenty that have been brought in from distant pastures.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Pollination Buddies",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3221
  ],
  "rewards": [],
  "tasks": []
}
