tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FlowerPower-AAAAAAAAAAAAAAAAAAAAIA==__PureDaisy-AAAAAAAAAAAAAAAAAAAMlg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3222,
  "prerequisites": [
    3221
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The first magical flower you are able to make is the Pure Daisy. This flower can slowly enchant nearby stone and logs into basic Botania ingredients.\n\nAfter placing the flower down, you can use put down stone and wood in the 8 tiles around it, and after a certain time they will be converted.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Pure Daisy",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3221
  ],
  "rewards": [],
  "tasks": []
}
