tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FlowerPower-AAAAAAAAAAAAAAAAAAAAIA==__RoundtwoFIGHT-AAAAAAAAAAAAAAAAAAAMqQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3241,
  "prerequisites": [
    3231
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now craft a Gaia Spirit ingot with your new Gaia Spirit from killing the Gaia guardian.\n\nPut the 4 pylons down and shift-right-click the Gaia Spirit ingot on the beacon to summon a harder version of Gaia Guardian.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Round Two... FIGHT!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3231
  ],
  "rewards": [],
  "tasks": []
}
