tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FlowerPower-AAAAAAAAAAAAAAAAAAAAIA==__Runes-AAAAAAAAAAAAAAAAAAAMrg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3246,
  "prerequisites": [
    3228
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Craft some runes, because why not?",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Runes",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3228
  ],
  "rewards": [],
  "tasks": []
}
