tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FlowerPower-AAAAAAAAAAAAAAAAAAAAIA==__SolarPowerFloral-AAAAAAAAAAAAAAAAAAAMtg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3254,
  "prerequisites": [
    3253
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The daybloom is an extremely simple generating flower. All you have to do is place it down, and it'll produce mana for free during the day. The downside of this arrangement is that dayblooms die after only an hour.\n\nYou can find Goldenrod flowers in Prairie biomes.\n\nMake one, and I'll give you another.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Solar Power: Floral Edition",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3253
  ],
  "rewards": [],
  "tasks": []
}
